# masci-tools

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  AUTHORS.txt  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  codecov.yml  copy_plugin_files.sh  open_source_licenses.txt  publish_to_pypi.sh.enc  pyproject.toml  requirements.txt  requirements_fleur_minimal.txt  requirements_pip.txt  setup.py  setup_requirements.txt
.github/workflows/: cd.yml  ci.yml  fleur-release.yml
SiSc_Lab/: bandstructure_reader.py  check_dos.py  new_reader.py
binder/: environment.yml
docs/: Makefile
docs/source/: _changelog.md  conf.py  index.md  index.rst
masci_tools/: __init__.py
masci_tools/cmdline/: __init__.py
masci_tools/io/: Untitled.ipynb  cif2inp_ase.py  common_functions.py  fleur_inpgen.py  fleur_xml.py  fleurxmlmodifier.py  hdf5_util.py  io_fleur_bands.py  io_fleur_inpgen.py  io_fleurxml.py  io_fleurxmlmodifier.py  io_hdf5.py  io_nmmpmat.py  kkr_params.py  kkr_read_shapefun_info.py  kkrimp_scoef_tools.py  modify_potential.py  tools_kkrimp.py
masci_tools/testing/: bokeh.py
masci_tools/tests/: codecov.yml  conftest.py  run_all.sh  run_all_cov.sh  run_all_covhtml.sh  test_bokeh_plots.py  test_case_insensitive_dict.py  test_case_insensitive_frozenset.py  test_cf_calculation.py  test_common_functions.py  test_common_xml_util.py  test_fleur_calculate_expression.py  test_fleur_inpxml_parser.py  test_fleur_outxml_conversions.py  test_fleur_outxml_parser.py  test_fleur_vis.py  test_fleurxmlmodifier.py  test_hdf5_reader.py  test_io_fleurxml.py  test_kkr_plotting.py  test_kkrimp_tools.py  test_kkrparams.py  test_kkrparser_functions.py  test_lockable_containers.py  test_parse_tasks.py  test_plot_methods.py  test_plotter.py  test_schema_dict.py  test_schema_dict_util.py  test_voroparser_functions.py  test_xml_common_functions.py  test_xml_converters.py  test_xml_getters.py  test_xml_setter_basic.py  test_xml_setter_signatures.py  test_xml_setters_basic.py  test_xml_setters_names.py  test_xml_setters_nmmpmat.py  test_xml_setters_xpaths.py
masci_tools/tools/: banddos_analysis_1.mlapp  banddos_analysis_1.mlappinstall  banddos_analysis_1.prj  cf_calculation.py  fleur_inpxml_converter.py  greensf_calculations.py  greensf_visualization.py  greensfunction.py  kkr_rms_tracker.py  matlabfrag.m  mlf2pdf.m  molecule3D.m  plotting.m  saving_pdf.m  saving_txt.m
masci_tools/util/: case_insensitive_dict.py  chemical_elements.py  constants.py  econfig.py  fleur_calculate_expression.py  fleur_outxml_conversions.py  io_fleur_bands.py  ipython.py  kkr_rms_tracker.py  lockable_containers.py  logging_util.py  math_util.py  modifypotential.py  parse_tasks.py  parse_tasks_decorators.py  parse_utils.py  plot_shapfun.py  python_util.py  schema_dict_util.py  sphinxext.py  typing.py  util_chemistry.py
masci_tools/vis/: __init__.py  bandstructure.py  base_plots.py  bokeh_plots.py  bokeh_plotter.py  common.py  data.py  fleur.py  fleur_plot_bands.py  fleur_plot_dos.py  helpers.py  kkr_plot_FS_qdos.py  kkr_plot_bandstruc_qdos.py  kkr_plot_dos.py  kkr_plot_shapefun.py  matplotlib_plotter.py  parameters.py  plot_methods.py
plot_methods/: plot_fleur_aiida.py  plot_methods.py
src/: plot_fleur_aiida.py  plot_methods.py
studenproject18w/: bandstructure_reader.py
studenproject18ws/: bandstructure_reader.py  bandstructure_reader_181124.py  gui.py  runner.py
studenproject18ws/control/: plotter.py
studenproject18ws/dos/: reader.py
studenproject18ws/hdf/: config.py  extract.py  input_transforms.py  load.py  output_types.py  reader.py  recipes.py  transform.py  util.py
studenproject18ws/jupyter/: Example_FileChoosers.ipynb  Example_LayoutWithWidgetAndPlot.ipynb  Example_PyVizPanelAndMatplotlib.ipynb  Example_mpl-inside-widget.ipynb  banddos.ipynb  banddos02.ipynb  banddos03.ipynb  banddos04.ipynb  banddos04_jupyterlab.ipynb  banddos05_AlphaVersion.ipynb  banddos05_jupyterlab.ipynb  banddos06_bandDOS-combined.ipynb  banddos07_newLayout.ipynb  banddos08.ipynb  banddos08_dashboard.ipynb  banddos09_combine08and06.ipynb  banddos10.ipynb
studenproject18ws/model/: constants.py  data.py  exceptions.py  reader.py  testnotebook.ipynb  util.py
studenproject18ws/plot/: base.py  ipyvolumeplot.py  matplot.py  plot.py
studenproject18ws/tmp/: bandstructure_reader_181124.py  bandstructure_reader_190108.py  bandstructure_reader_190117.py  plotter.py  reader.py  runner.py  testnotebook.ipynb
studentproject18w/: README.md  README.tex  environment.yml  environment_failed_attemps.yml  gui.py  requirements_pip.txt
studentproject18w/doc/: .#scratch.tex  scratch.aux  scratch.nav  scratch.out  scratch.snm  scratch.tex  scratch.toc  web-app-devnotes_johannes.md
studentproject18w/dos/: reader.py
studentproject18w/hdf/: exceptions.py  input_transforms.py  reader.py  util.py
studentproject18w/jupyter/: banddos.ipynb  banddos06_bandDOS-combined.ipynb  banddos07_newLayout.ipynb  banddos09_combine08and06.ipynb  banddos10.ipynb  banddos11.ipynb
studentproject18w/plot/: base.py  ipyvolumeplot.py  matplot.py
studentproject18w/tmp/: StefansTool_mlapp_code.m  bandstructure_reader_181212.py  (+2 more)
tests/: conftest.py  run_all.sh  run_all_cov.sh  run_all_covhtml.sh  test_bokeh_plots.py  test_case_insensitive_frozenset.py  test_cf_calculation.py  test_common_functions.py  test_common_plots.py  test_fleur_inpxml_parser.py  test_fleur_outxml_parser.py  test_fleur_vis.py  test_fleurxmlmodifier.py  test_io_fleur_inpgen.py  test_io_fleurxml.py  test_kkr_plotting.py  test_kkrimp_tools.py  test_kkrparams.py  test_kkrparser_functions.py  test_lockable_containers.py  test_parse_tasks.py  test_plot_data.py  test_plot_methods.py  test_plotter.py  test_schema_dict.py  test_schema_dict_util.py  test_voroparser_functions.py  test_xml_common_functions.py  test_xml_converters.py  test_xml_getters.py  test_xml_setters_basic.py  test_xml_setters_names.py  test_xml_setters_nmmpmat.py
utils/: validate_version_consistency.py  write_fleurxmlmodifier_docstrings.py
(+1368 files in other folders)
