[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "masci_tools"
version = "0.7.0"
description = "Tools for Materials science. Vis contains wrapers of matplotlib functionality to visualalize common material science data. Plus wrapers of visualisation for aiida-fleur workflow nodes"
readme = "README.md"
authors = ["Jens Bröder <j.broeder@fz-juelich.de>",
           "Philipp Rüssmann <p.ruessmann@fz-juelich.de>",
          ]
license = "MIT"
homepage = "https://github.com/JuDFTteam/masci-tools"
repository = "https://github.com/JuDFTteam/masci-tools"
documentation = "https://masci-tools.readthedocs.io"
keywords = ["material science",
            "plots",
            "visualization",
            "aiida",
            "dft"]
classifiers = ["Development Status :: 4 - Beta",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: MIT License",
               "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.7",
               "Programming Language :: Python :: 3.8",
               "Programming Language :: Python :: 3.9",
               'Programming Language :: Python :: 3.10',
               "Topic :: Scientific/Engineering :: Physics"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "*"
scipy = "*"
matplotlib = "*"
h5py = "*"
pandas = "*"
lxml = "^4.6.3"
more_itertools = "*"
bump2version = "*"
pytest = "^6.0"
pytest-cov = "*"
pytest-mpl = "*"
future = "*"
seaborn = "*"
deepdiff = "*"
humanfriendly = "*"
mendeleev = "*"
click = "*"
click-completion = "*"
PyYAML = "*"

[tool.mypy]
python_version="3.8"
warn_unused_ignores=true
warn_redundant_casts=true
show_error_codes = true

[[tool.mypy.overrides]]
module = 'h5py'
follow_imports='skip'
ignore_missing_imports=true

[tool.yapf]
based_on_style = "google"
column_limit = 120
coalesce_brackets = true
align_closing_bracket_with_visual_indent = true
split_arguments_when_comma_terminated = true
indent_dictionary_value = false

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "too-many-public-methods",
    "bad-continuation",
    "wrong-import-position",
    "line-too-long",
    "locally-disabled",
    "wildcard-import",
    "locally-enabled",
    "too-many-instance-attributes",
    "fixme",
    "len-as-condition",
    "wrong-import-order",
    "import-outside-toplevel", 
    "duplicate-code",
    "unnecessary-pass", 
    "invalid-name",
    "unused-variable",
    "unused-argument",
    "unused-import",
    "missing-function-docstring",
    "too-many-locals",
    "too-many-branches",
    "no-self-use",
    "c-extension-no-member",
    "too-many-statements",
    "too-many-nested-blocks",
    "too-many-lines",
    "too-many-return-statements",
    "too-many-arguments",
    "pointless-string-statement",
    "no-member",
    "consider-using-f-string"
]

[tool.pylint.basic]
good-names = [
    "_",
    "x",
    "y",
    "z",
    "i",
    "j",
    "k",
]
no-docstring-rgx = "^_"
docstring-min-length = 5

[tool.pylint.design]
max-locals = 20

[tool.pylint.classes]
exclude-protected= ["_asdict","_fields","_replace","_source","_make", "_Element", "_ElementTree", "_pprint_dict","_pprint_set", "_dispatch"]

[tool.pytest.ini_options]
minversion="6.0"
addopts = "--mpl --cov=masci_tools --cov=tests --cov-report xml --mpl-generate-summary=html"
mpl-results-path= "mpl-results"
testpaths = [
    "tests",
]
